test/fail/M0229.mo
import { increment } "mixins/Counter";

actor {};
